[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Attributes to simplify the use of the relm crate"
documentation = "https://docs.rs/relm-attributes/"
license = "MIT"
name = "relm-attributes"
repository = "https://github.com/antoyo/relm"
version = "0.9.0"

[dependencies]
env_logger = "^0.4.2"
log = "^0.3.7"
proc-macro2 = { version = "^0.1.2", features = ["unstable"] }

[dependencies.quote]
git = "https://github.com/dtolnay/quote"

[dependencies.syn]
git = "https://github.com/dtolnay/syn"

[dependencies.relm-gen-widget]
path = "../relm-gen-widget"
version = "^0.9.0"

[lib]
proc-macro = true
