[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Utility crate for relm-attributes and relm-derive"
documentation = "https://docs.rs/relm-gen-widget/"
license = "MIT"
name = "relm-gen-widget"
repository = "https://github.com/antoyo/relm"
version = "0.9.10"

[dependencies]
lazy_static = "^0.2.4"
proc-macro2 = "^0.1.2"

[dependencies.quote]
git = "https://github.com/dtolnay/quote"

[dependencies.syn]
features = ["fold", "full", "visit"]
git = "https://github.com/dtolnay/syn"
